# SynapseOS

./: .gitignore  mkdocs.yml  src_tree.txt  tree.txt
backend/: .dockerignore  .env.example  Dockerfile  mlflow.db  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 1996cdc92613_create_knowledge_documents_table.py  2fbafeaa526c_create_forecast_model.py  3282341e5c93_add_forecast_evaluation_metrics.py  3dec55e6129c_create_risk_analysis.py  4da237685b04_create_users_table.py  613f78f657f6_add_conversations_table.py  6958163de555_update_forecast_model.py  6b32614de442_add_conversation_messages.py  71ce5a37b820_add_anomaly_indices.py  7586fd68d561_add_dataset_files.py  85fbc23725a8_add_dataset_semantic_model.py  9dbf56995915_initial_schema.py  9f52d2d0df3a_create_users_table.py  a4ea4e4c9d7d_test.py  aed603d60cf7_add_dataset_files.py  b79370bfb0d6_initial_schema.py  b93f25895922_create_tenants_table.py  c15f1071e514_add_prediction_runs.py  d2cd00f374e8_add_training_group_to_ml_models.py  d709699c5890_upgrade_forecast_model_metadata.py  e3852bbfcf56_add_refresh_tokens.py  f05e2c2b0462_create_tenants_table.py
backend/artifacts/: 198674a1-7c31-461b-a1fa-7f869e9074aa.joblib  9fa8720b-a3bb-4081-8b17-7ccda3582ee5.joblib  c3a60563-4651-47a6-9eeb-27d57c593340.joblib
backend/artifacts/evaluation/: basic_rag_v1.json  generation_evaluation.json  generation_evaluation.md  hybrid_reranker_v1.json
backend/artifacts/forecast/: 036aee8e-242d-4575-ac27-38e682f59fe5.joblib  044e7265-97fd-4fb1-9056-b977c80e299d.joblib  060666d4-29b7-4892-a0e9-001351744e65.joblib  07388b84-5337-4072-9550-7cb06014b8f4.joblib  17c11593-438e-4bcd-a810-2bc15f397150.joblib  195f3549-9ced-4c1e-8e1e-567d8d76676f.joblib  1a3ca880-d55e-4b38-ab49-189fc8a68854.joblib  1b29ae9b-8cf2-4ef8-9b12-954ad25c7848.joblib  1c2b7876-7fcf-4166-96e5-2f686ee4a3c0.joblib  29ba4165-9644-4c65-b598-5b67fa3b2fd3.joblib  2bf5c3e2-a8d2-479b-85c6-751484e8c021.joblib  2c3c39fd-384d-431f-a8d8-d84f86744fd9.joblib  2cd7b9d2-d27d-4cf0-96ee-65e86443b0c4.joblib  30806208-679f-4b34-8dfc-0b853ab370e7.joblib  36759210-3dd8-4f77-9b1a-2c47efbd9049.joblib  371aa192-8abb-49fb-90e1-44fe0bc3fd0f.joblib  3a6bec12-6f7c-4349-9205-8e909be72130.joblib  (+53 more)
backend/ragas_evaluation/: api_client.py  dataset_builder.py
backend/scripts/: graph_builder.py  run_benchmark.py  test_entity_extractor.py  test_graph_retriever.py  test_neo4j.py
backend/src/: main.py
backend/src/core/: rbac.py  (+7 more)
backend/tests/: test_health.py
(+435 files in other folders)
