[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "alembic>=1.16",
    "fastapi>=0.116",
    "joblib>=1.5",
    "minio>=7.2",
    "numpy>=2.3",
    "pandas>=2.3",
    "polars>=1.34",
    "psycopg[binary]>=3.2",
    "pwdlib[argon2]>=0.3",
    "pyarrow>=21,<24",
    "pydantic[email]>=2.11",
    "pydantic-settings>=2.10",
    "pyjwt>=2.10",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7",
    "sqlalchemy>=2.0",
    "uvicorn>=0.35",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "black",
    "httpx",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mlflow>=3.0",
]
