[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "alembic>=1.16",
    "fastapi>=0.116",
    "joblib>=1.5",
    "minio>=7.2",
    "numpy>=2.3",
    "pandas>=2.3",
    "polars>=1.34",
    "psycopg[binary]>=3.2",
    "pwdlib[argon2]>=0.3",
    "pyarrow>=21,<24",
    "pydantic[email]>=2.11",
    "pydantic-settings>=2.10",
    "pyjwt>=2.10",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7",
    "sqlalchemy>=2.0",
    "uvicorn>=0.35",
    "xgboost>=3.2.0",
    "shap>=0.51.0",
    "prophet>=1.3.0",
    "plotly>=6.8.0",
    "qdrant-client>=1.18.0",
    "llama-index>=0.14.22",
    "llama-index-embeddings-huggingface>=0.7.0",
    "sentence-transformers>=5.6.0",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-openai>=0.7.9",
    "nltk>=3.9.4",
    "groq>=1.5.0",
]

[dependency-groups]
dev = [
    "black",
    "httpx",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mlflow>=3.0",
]
